--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -13,9 +13,28 @@
     }
 }
 
+@keyframes right
+{
+    from
+    {
+        transform: translateX(-100%);
+    }
+    
+    to
+    {
+        transform: translateX(0);
+    }
+}
+
 .animate-up
 {
     animation: up;
     animation-duration: 300ms;
     animation-fill-mode: backwards;
+}
+
+.animate-right
+{
+    animation-name: right;
+    animation-duration: 300ms;
 }
