--- a/public/css/animations.css
+++ b/public/css/animations.css
@@ -26,6 +26,19 @@
     }
 }
 
+@keyframes appear
+{
+    from
+    {
+        opacity: 0;
+    }
+    
+    to
+    {
+        opacity: 1;
+    }
+}
+
 .animate-up
 {
     animation: up;
@@ -37,4 +50,11 @@
 {
     animation-name: right;
     animation-duration: 300ms;
+}
+
+.animate-appear
+{
+    animation-name: appear;
+    animation-duration: 300ms;
+    animation-fill-mode: backwards;
 }
